# basic-lang

./: .gitignore  CNAME  Cargo.toml  README.md  _config.yml
_layouts/: default.html
games/: README.md  superstartrek
patch/: README.md  hamurabi  hobbit  lem  lunar  oregontrail  rocket  superstartrek  trade  wizard  wumpus
src/: lib.rs  main.rs
src/doc/: appendix_a.rs  appendix_b.rs  appendix_c.rs  chapter_1.rs  chapter_2.rs  chapter_3.rs  introduction.rs
src/doc/statements/: clear.rs  cls.rs  cont.rs  data.rs  def.rs  deftype.rs  delete.rs  dim.rs  end.rs  erase.rs  for.rs  gosub.rs  goto.rs  if.rs  input.rs  let.rs  list.rs  load.rs  mid.rs  new.rs  next.rs  on.rs  print.rs  read.rs  rem.rs  renum.rs  restore.rs  return.rs  run.rs  save.rs  stop.rs  swap.rs  tron.rs  while.rs
src/lang/: ast.rs  error.rs  ident.rs  lex.rs  line.rs  mod.rs  parse.rs  token.rs
src/lang/test/: parse_test.rs
src/lang/tests/: lex_test.rs  line_test.rs  parse_test.rs
src/mach/: codegen.rs  compile.rs  function.rs  link.rs  listing.rs  mod.rs  op.rs  opcode.rs  operation.rs  program.rs  runtime.rs  stack.rs  val.rs  var.rs
src/mach/tests/: expr_test.rs  for_test.rs  mod.rs
src/term/: linefeed.rs  mod.rs  rustyline.rs
tests/: array_test.rs  expr_test.rs  expression_test.rs  for_test.rs  function_test.rs  if_test.rs  input_test.rs  lex_test.rs  parse_test.rs  statement_test.rs
tests/common/: mod.rs
