[package]
name = "basic-lang"
version = "0.4.0"
authors = ["David Turnbull"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "http://basic-lang.org/"
repository = "https://github.com/AE9RB/basic-lang"
description = "The BASIC programming language as it was in the 8-bit era."

edition = "2018"

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
ansi_term = "0.12"
ctrlc = "3"
linefeed = "0.6"

[lib]
name = "basic"
doc = true
test = true

[[bin]]
name = "basic"
path = "src/main.rs"
doc = false
test = false
