[package]
edition = "2018"
name = "basic-lang"
version = "0.5.0"
authors = ["David Turnbull"]
license = "Apache-2.0 OR MIT"
homepage = "http://basic-lang.org/"
repository = "https://github.com/AE9RB/basic-lang"
description = "The BASIC programming language as it was in the 8-bit era."
readme = "README.md"
exclude = ["patch"]

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
crc = "1.8"
ctrlc = "3"
linefeed = "0.6"
mortal = "0.2"
rand = "0.7"
reqwest = {version = "0.10", features = ["blocking"]}

[lib]
name = "basic"
doc = true
test = true

[[bin]]
name = "basic"
path = "src/main.rs"
doc = false
test = false
