[package]
edition = "2018"
name = "basic-lang"
version = "0.7.1"
authors = ["David Turnbull"]
license = "Apache-2.0 OR MIT"
homepage = "http://basic-lang.org/"
repository = "https://github.com/AE9RB/basic-lang"
description = "The BASIC Programming Language: Microcomputer Edition"
readme = "README.md"
exclude = ["patch"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
ansi_term = "0.12"
chrono = "0.4"
crc = "1.8"
ctrlc = "3"
linefeed = "0.6"
mortal = "0.2"
rand = "0.8"
reqwest = {version = "0.11", features = ["blocking"]}

[lib]
name = "basic"
doc = true
test = true

[[bin]]
name = "basic"
path = "src/main.rs"
doc = false
test = false
